# 2026S-HC

./: .gitmodules
ueb-01/: .gitignore  CLAUDE.md  README.md
ueb-01/.claude/: audience-detection-plan.md
ueb-01/api/: .gitignore  README.md  env.xmpl  pyproject.toml
ueb-01/api/app/: config.py  db.py  models.py  prompts.py  storage.py
ueb-01/api/app/api/: main.py
ueb-01/api/app/api/routers/: contents.py  pools.py
ueb-01/api/app/cli/: __init__.py
ueb-01/api/app/cli/commands/: contents.py  db.py  pools.py  seed.py
ueb-01/api/app/debug/: bus.py  middleware.py  router.py
ueb-01/api/app/services/: contents.py  pools.py  selection.py
ueb-01/api/app/templates/: _candidates.j2  _context.j2  choose_by_context_user.j2  choose_by_image_user.j2  selection_system.j2
ueb-01/api/fixtures/bakery/: 01-fruehstueck-to-go.html  02-heisse-schokolade.html  03-eiskaffee.html  04-kinder-naschstation.html  05-kaffeeklatsch.html  06-suppe-broetchen.html
ueb-01/api/migrations/: env.py
ueb-01/api/migrations/versions/: bc9fe691e9c8_initial_schema.py
ueb-01/api/tests/: conftest.py  test_cli.py  test_content_preview.py  test_debug_bus.py  test_debug_middleware.py  test_debug_selection_hook.py  test_prompts.py  test_routes.py  test_services.py
ueb-01/arduino/: .gitignore  app.yaml
ueb-01/cli/: .gitignore  _common.sh  configure.sh  control.sh  dev.sh  env.xmpl  rsync.sh  verify-pipelines.sh
ueb-01/detection/: .gitignore  README.md  requirements.txt
ueb-01/web/: index.html
ueb-02/: .gitignore  CLAUDE.md  README.md  requirements.txt  run_all.sh  setup.sh
(+123 files in other folders)
