[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digsig-api"
version = "0.1.0"
description = "FastAPI service for the DigSig prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

# Console entry point: after `pip install -e .` the `digsig` command is on PATH.
[project.scripts]
digsig = "app.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
